add pluggable serialization strategy across all storage modules